added bulma import and basic main/app function

--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "bulma": "^0.9.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
