--- a/package.json
+++ b/package.json
@@ -1,30 +1,19 @@
 {
     "name": "campaign-manager",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server/server.js",
     "scripts": {
-      "dev": "vite",
-      "start": "vite",
-      "build": "vite build",
-      "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-      "preview": "vite preview"
+      "start": "node server/server.js --ignore client",
+      "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+      "install": "cd server && npm i && cd ../client && npm i",
+      "seed": "cd server && npm run seed",
+      "build": "cd client && npm run build"
     },
-    "dependencies": {
-      "bootstrap": "^5.3.2",
-      "react": "^18.2.0",
-      "react-bootstrap": "^2.10.1",
-      "react-dom": "^18.2.0",
-      "react-router-dom": "^6.22.1"
-    },
+    "author": "",
+    "license": "ISC",
     "devDependencies": {
-      "@types/react": "^18.2.15",
-      "@types/react-dom": "^18.2.7",
-      "@vitejs/plugin-react": "^4.0.3",
-      "eslint": "^8.45.0",
-      "eslint-plugin-react": "^7.32.2",
-      "eslint-plugin-react-hooks": "^4.6.0",
-      "eslint-plugin-react-refresh": "^0.4.3",
-      "vite": "^4.4.5"
+      "concurrently": "^5.3.0"
     }
   }
+  
