--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "bulma": "^0.9.4"
+    "bulma": "^0.9.4",
+    "react-router-dom": "6.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
