--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
+    "@apollo/react-hooks": "^4.0.0",
+    "bootstrap": "^5.3.3",
     "bulma": "^0.9.4",
+    "graphql": "^16.8.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1"
